import { PaymentConcept } from './configuracion.model';
import { Empleado } from './empleado.model';

export interface Planilla {
  /** Opcional porque los formularios arman el objeto antes de guardarlo. */
  id?: string;
  empleado_id: string;
  periodo_id?: string | null;
  /**
   * La planilla con nombre que la agrupa, o null si está "Sin agrupar".
   *
   * El backend siempre lo ha mandado; acá faltaba declararlo. Es lo que le
   * permite al detalle de un trabajador saber a qué pantalla volver.
   */
  corrida_id?: string | null;
  mes: number;
  anio: number;
  /** Llega como string decimal desde Laravel; se castea al mostrar. */
  sueldo_base?: number | string;
  bonificaciones?: number | string;
  descuentos?: number | string;
  total?: number | string;
  estado_registro?: string;
  empleado?: Empleado | null;
  payroll_detalles?: PayrollDetalle[];
}

export interface PlanillaPayload {
  empleado_id: string;
  mes: number;
  anio: number;
  periodo_id?: string | null;
  bonificaciones?: number;
  descuentos?: number;
}

/**
 * Detalle de planilla. Ojo con los nombres: el backend usa
 * payment_concept_id y monto_calculado (no concepto_id/monto, como tenía
 * mal el frontend anterior).
 */
export interface PayrollDetalle {
  id: string;
  planilla_id: string;
  payment_concept_id: string;
  monto_calculado: number | string;
  /** Cómo se escribió la línea. Null en las que se pusieron en soles a secas. */
  calculo?: 'fijo' | 'porcentaje' | null;
  /** El 5 de "5%", o los 100 de "S/ 100". */
  valor?: number | string | null;
  /** Lo mismo ya legible ("5%"), que arma el backend. */
  como_se_calculo?: string | null;
  descripcion?: string | null;
  estado?: string;
  payment_concept?: PaymentConcept;
  planilla?: Planilla;
}

/**
 * Al crear una línea se manda su regla (calculo + valor) y los soles los saca
 * el backend. `monto_calculado` sigue aceptándose para escribir el importe a
 * secas, pero entonces la línea se queda sin regla que enseñar.
 */
export interface PayrollDetallePayload {
  planilla_id: string;
  payment_concept_id: string;
  calculo?: 'fijo' | 'porcentaje';
  valor?: number;
  monto_calculado?: number;
  descripcion?: string | null;
}

/** Respuesta de POST /periodos/{id}/generar-planilla */
export interface GeneracionMasivaPlanilla {
  periodo: string;
  mes: number;
  anio: number;
  /** `evaluados` es a cuántos se apuntó; generadas + omitidas suman eso. */
  resumen: { generadas: number; omitidas: number; evaluados?: number };
  detalle: Array<{
    empleado: string;
    empleado_id: string;
    estado: string;
    planilla_id?: string;
    motivo?: string;
  }>;
}

/** Respuesta de POST /boletas/generar-masivo */
export interface GeneracionMasivaBoletas {
  success: boolean;
  message: string;
  generadas: number;
  omitidas: number;
  /** Las omitidas, separadas: no es lo mismo "ya la tenía" que "no tiene planilla". */
  yaTenianBoleta?: number;
  sinPlanilla?: number;
  /** Nombre de la planilla, cuando se emitió desde una. */
  planilla?: string | null;
}

/** Respuesta de POST /payment-concepts/{id}/aplicar-a-grupo */
export interface AplicacionConceptoGrupo {
  concepto: string;
  mes: number;
  anio: number;
  resumen: { aplicadas: number; omitidas: number };
  /**
   * Solo cuando se aplicó a una planilla con nombre: viene con sus cifras
   * recalculadas, porque el neto de esa planilla acaba de cambiar y la
   * pantalla tiene que poder reflejarlo sin volver a pedirlo.
   */
  corrida?: {
    id: string;
    nombre: string;
    personas: number;
    masa_salarial: number;
  } | null;
  detalle: Array<{
    empleado: string;
    estado: string;
    monto?: number;
    motivo?: string;
  }>;
}
